--- a/src/booking_schedule.html
+++ b/src/booking_schedule.html
@@ -129,20 +129,16 @@
                                 </label>
                             </div>
                             <div class="content_booking_schedule">
-                                <label class="container_checkbox">
+                                <label class="container_checkbox p-0">
                                     <span class="booking_content">다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</span>
                                     <div class="booking_sub_content">
                                         <span>예약일 : 2019-07-15</span>
                                         <span>기간 : 2019-08-15~2019-08-22</span>
                                     </div>
-                                    <input type="checkbox">
-                                    <span class="checkmark"></span>
+                                    <p class="nofitication_booking_schedule">
+                                        즐거운 여행이 되셨나요? 후기를 남기시면 스탬프를 찍어 드립니다.
+                                    </p>
                                 </label>
-                            </div>
-                            <div class="content_booking_schedule">
-                                <p class="nofitication_booking_schedule">
-                                    즐거운 여행이 되셨나요? 후기를 남기시면 스탬프를 찍어 드립니다.
-                                </p>
                             </div>
                             <div class="content_booking_schedule">
                                 <button class="btn btn_booking">
