--- a/src/tour_schedule.html
+++ b/src/tour_schedule.html
@@ -264,7 +264,7 @@
 
                             <div class="card">
                                 <div class="card-title schedule_title">
-                                    <span>공유하기</span>
+                                    <button class="btn"><i class="fas fa-share-alt"></i> 공유하기</button>
                                 </div>
                                 <div class="card-body schedule_content">
                                     <p>
